Changes in 2.0.10:
  o Build Changes:
    * An xml formatted log has been added to :debuginfo. This is in
      addition to the human readable log. The xml log contains the same
      information as the human readable log, plus additional contextual
      information useful for formatting the log data. (CNY-2487)
    * AutoResolve defaults to True for image groups. (CNY-2291)
    * Exceptions and inclusions to policies that don't match anything
      will now emit an error. (CNY-2221)
    * A new selective logging facility for policy to use to inspect
      build output has been added. (CNY-2622)
    * It is now possible to pass a list of multiple URLs to addArchive.
      Conary will try to download the source from each URL, in order,
      until it succeeds. (CNY-2505)
    * Recipe actions have now the ability to suggest build requirements.
      (CNY-935)
    * Running "cvc cook" in a directory with a CONARY file now builds the
      sources specified by that checkout.  This is particularly useful for
      source troves which do not provide recipes thanks to a factory.
      (CNY-2642)
    * Conary now looks for factories in the same places it looks for
      superclasses, including the current working directory for local
      cooks. (CNY-2641)
    * Suggesting build requirements produces a warning if the supplied
      command cannot be found in the search path. (CNY-2663)
    * Skip FactoryRecipeClass when loading recipes to make it easier to
      develop factory recipes. (CNY-2666)
    * Checking out multiple sources with a single command line once again
      creates the CONARY files properly. (CNY-2645)
    * The addArchive source action now supports .war and .jar archives.
      (CNY-2684) 

  o Bug Fixes:
    * Previously, rollbacks could restore files from local rollbacks
      by overwriting existing contents rather than replacing the file.
      In addition, the operation was not journaled properly.  (CNY-2596)