@@ -1,3 +1,8 @@
+Changes in @NEW@:
+  o Build Changes:
+    * Added 'factory' command to cvc for displaying and changing the factory
+      of the currently checked out recipe (CNY-2690)
+
 Changes in 2.0.10:
   o Build Changes:
     * An xml formatted log has been added to :debuginfo. This is in
